--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -82,5 +82,9 @@
   "button": {
     "all_buttons": "All Buttons",
     "buttons": "Buttons"
+  }, 
+  "event": {
+    "hide_sidebar": "Hide Sidebar",
+    "show_sidebar": "Show Sidebar"
   }
 }
