--- a/src/translations/zh-Hans.json
+++ b/src/translations/zh-Hans.json
@@ -82,5 +82,9 @@
   "button": {
     "all_buttons": "所有按钮",
     "buttons": "按钮"
+  }, 
+  "event": {
+    "hide_sidebar": "隐藏侧边栏",
+    "show_sidebar": "显示侧边栏"
   }
 }
