--- a/src/translations/zh-Hans.json
+++ b/src/translations/zh-Hans.json
@@ -86,5 +86,9 @@
   "event": {
     "hide_sidebar": "隐藏侧边栏",
     "show_sidebar": "显示侧边栏"
+  }, 
+  "setting": {
+    "title": "设置", 
+    "area_sort": "区域排序"
   }
 }
