--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -89,6 +89,7 @@
   }, 
   "setting": {
     "title": "Setting", 
-    "area_sort": "Area Sort"
+    "area_sort": "Area Sort", 
+    "save": "Save"
   }
 }
