--- a/src/translations/zh-Hans.json
+++ b/src/translations/zh-Hans.json
@@ -90,6 +90,7 @@
   "setting": {
     "title": "设置", 
     "area_sort": "区域排序", 
-    "save": "保存"
+    "save": "保存", 
+    "domain_sort": "类型排序"
   }
 }
