区域视图中排除domain，二元传感器，日历，摄像头，覆盖物，风扇，加湿器，锁，杂项，主页，安全页面

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -95,5 +95,12 @@
   }, 
   "alarm_control_panel": {
     "title": "Security"
+  }, 
+  "security": {
+    "title": "Security"
+  }, 
+  "humidifier": {
+    "all_humidifiers": "All Humidifiers",
+    "humidifiers": "Humidifiers"
   }
 }
