警报器，播放器，文本，图表，图标，磁贴，传感器，

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -102,5 +102,13 @@
   "humidifier": {
     "all_humidifiers": "All Humidifiers",
     "humidifiers": "Humidifiers"
+  }, 
+  "siren": {
+    "all_sirens": "All Sirens",
+    "sirens": "Sirens"
+  }, 
+  "text": {
+    "all_texts": "All Texts",
+    "texts": "Texts"
   }
 }
