优化，待办事项，扫地机，阀门，热水器，天气预报，首页

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -110,5 +110,14 @@
   "text": {
     "all_texts": "All Texts",
     "texts": "Texts"
+  }, 
+  "todo": {
+    "todos": "Todos"
+  }, 
+  "water_heater": {
+    "water_heaters": "Water Heaters"
+  }, 
+  "weather": {
+    "weather": "Weather"
   }
 }
